[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medtriage-env"
version = "1.0.0"
description = "Clinical Decision Support RL Environment - OpenEnv compliant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.57.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*"]
